--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,8 @@
     <string name="Username">Username</string>
     <string name="Password">Password</string>
     <string name="Login">Login</string>
-    <string name="welcome">welcome</string>
+    <string name="signup">signup</string>
+    <string name="welcome">WELCOME</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
