--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="Login">Login</string>
     <string name="signup">signup</string>
     <string name="welcome">WELCOME</string>
+    <string name="cricketer">CRICKETER</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="Greetings">Hii Welcome, %1$s</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
