--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,11 @@
     <string name="signup">signup</string>
     <string name="welcome">WELCOME</string>
     <string name="cricketer">CRICKETER</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="Greetings">Hii Welcome, %1$s</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="special">special</string>
+    <string name="enter_username">Enter Username</string>
+    <string name="enter_password">Enter password</string>
 </resources>
