--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,12 @@
 
     <string name="Greetings">Hii Welcome, %1$s</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Dynamic">HetrogenousLayouts</string>
     <string name="special">special</string>
     <string name="enter_username">Enter Username</string>
     <string name="enter_password">Enter password</string>
+    <string name="next_page">Next Page</string>
+    <string name="textarea">texthint</string>
+    <string name="Hints">enter your hint</string>
+    <string name="submit">submit</string>
 </resources>
